# ImageEditor

./: .gitignore  CMakeLists.txt  build.ps1  readme.md  vcpkg-configuration.json  vcpkg.json
include/: Window.hpp
old/: image.py  image2.py  requirements.txt
src/: Window.cpp  main.cpp
vcpkg_overlay_ports/imgui/: CMakeLists.txt  imconfig.patch  imgui-config.cmake.in  portfile.cmake  vcpkg.json
